implement user management workflows

--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -3,3 +3,6 @@ plugins:
   - plugin: go
     out: protogen
     opt: paths=source_relative
+  - plugin: go-grpc
+    out: protogen
+    opt: paths=source_relative
